update model ui

--- a/ui/app/templates/generation/index.hbs
+++ b/ui/app/templates/generation/index.hbs
@@ -8,7 +8,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.name}}
+          @value={{this.model.module_name}}
           class="input value-input"
           placeholder="部署集群名称 eg：mmsprwereadworker"
           data-test-var-value
@@ -22,7 +22,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-             @value={{this.model.type}}
+             @value={{this.model.op_type}}
           class="input value-input"
           placeholder="模型的op-type 全局唯一，eg：weread.rank.z"
           data-test-var-value
@@ -38,7 +38,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.path}}
+          @value={{this.model.model_path}}
           class="input value-input"
           placeholder="模型文件在cos上的地址 eg：graphflow/models/ime_rec/bert_tokenizer/11.tar.zst"
           data-test-var-value
@@ -52,7 +52,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.md5}}
+          @value={{this.model.model_md5}}
           class="input value-input"
           placeholder="模型文件MD5"
           data-test-var-value
@@ -68,7 +68,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.count}}
+          @value={{this.model.model_count}}
           class="input value-input"
           placeholder="模型一共部署的数量"
           data-test-var-value
@@ -98,7 +98,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.con}}
+          @value={{this.model.model_concurrency}}
           class="input value-input"
           placeholder="单个模型进程的Concurrency"
           data-test-var-value
@@ -112,7 +112,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.ip}}
+          @value={{this.model.deploy_ip}}
           class="input value-input"
           placeholder="模型分布在集群的哪些节点上，不设置则默认所有节点 eg: 11.143.173.190,11.176.160.244"
           data-test-var-value
@@ -128,7 +128,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.sam}}
+          @value={{this.model.samosa_logic_worker_num}}
           class="input value-input"
           placeholder="每个模型进程的logic worker数量"
           data-test-var-value
@@ -142,7 +142,7 @@
         </span>
         <Input
           @type={{this.inputType}}
-          @value={{this.model.vara}}
+          @value={{this.model.extra_env}}
           class="input value-input"
           placeholder="模型进程需要的额外环境变量 eg: ENVTESTA=AAA,ENVTESTB=BBB"
           data-test-var-value
@@ -151,13 +151,12 @@
     </div>
   </div>
     <div style="text-align:center">
-     <LinkTo
-       @route="jobs.runmodel"
-       {{on "click" this.handleClick}}
-       @query={{hash direction="aaa"}}
-       class="button is-primary"
-     >
-       Plan
-     </LinkTo>
+     <button
+             type="button"
+             class="button is-primary"
+             {{on "click" this.handleClick}}
+           >
+             Plan
+     </button>
     </div>
 </section>
